# models-utils

./: .dockerignore  .gitignore  AUDIT_LOGGING.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  UUID_MIGRATION_PLAN.md  setup.cfg
.github/workflows/: ci.yml  make-migrations.yml  migrate.yml  run-migrations.yml
alembic/: env.py
alembic/seeds/: __init__.py  rbac_seed.py  tier_seed.py
alembic/versions/: 025c4f6fec04_autogenerated_migration_from_pr.py  090ee4ba0ead_add_tier_change_request_table.py  0f529c470393_add_pending_role_ids_to_notifications.py  1e745f682fff_replace_customfield_with_.py  2f76adc5966b_refactor_order_date_fields_to_due_date_.py  333a94575eb7_add_billing_models_and_user_invitation_.py  33a329dd038b_autogenerated_migration_from_pr.py  37bcd9539daa_add_tier_modules_yearly_price_sub_.py  384a24a274db_add_status_to_order.py  3896482c00ab_use_gt_time_zone.py  3ae9e6f32c18_replace_is_active_with_status_enum.py  3ec9a48e5ddd_autogenerated_migration_from_pr.py  46fa11ccdeb8_use_seed_for_rbac.py  4d5c4f653bdb_autogenerated_migration_from_pr.py  5cc0e3f33187_add_email_verification_and_password_reset.py  5e70de00414c_add_generation_date_to_order_model.py  6a6f4acfcc2e_autogenerated_migration_from_pr.py  77905552a1b8_task_enhancements_and_template.py  77c97338cfd9_remove_legacy_role_and_admin_from_.py  7ddfc76c44dd_task_module.py  82da1e77a603_autogenerated_migration_from_pr.py  85cff9164dee_autogenerated_migration_from_pr.py  85d2dfb7484b_create_user_and_order_tables.py  9464159c360b_notification_model.py  95da85acc5c9_autogenerated_migration_from_pr.py  98df8301ae46_workflow_module.py  99be9125d301_autogenerated_migration_from_pr.py  add_missing_permissions.py  (+23 more)
database_utils/: database.py
docs/: auth-models.md  crm-models.md  migrations.md  schemas.md  utilities.md  workflow-models.md
my_shared_db/: database.py  migrations.py
tests/: test_email_schemas.py  test_email_service.py  test_email_templates.py  test_models_email_tokens.py  test_permission_uuid.py  test_smoke.py  test_smtp_email_service.py  test_token_utils.py
(+79 files in other folders)
