[metadata]
name = my-shared-db
version = 0.1.0
author = Ricardo Pellecer
author_email = you@example.com
description = Shared SQLAlchemy models and migrations for FastAPI services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pel19072/models-utils
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    sqlalchemy>=2.0
    alembic>=1.12
    psycopg2-binary
    pydantic>=2.0
    python-dotenv>=1.0