[metadata]
name = database-utils
version = 1.4.2
author = Ricardo Pellecer
author_email = you@example.com
description = Shared SQLAlchemy models, migrations, and dependencies for FastAPI services with comprehensive audit logging (UUID primary keys)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pel19072/models-utils
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    sqlalchemy>=2.0
    alembic>=1.12
    bcrypt>=4.2.0
    psycopg2-binary
    pydantic>=2.12.5
    pydantic_core>=2.41.5
    python-dotenv>=1.0
    passlib>=1.7.4
    fastapi>=0.100.0
    PyJWT>=2.8.0
    loguru>=0.7.3
    email-validator>=2.0.0

[options.packages.find]
include = database_utils*